--- a/Standard/dol-papers.bib
+++ b/Standard/dol-papers.bib
@@ -44,13 +44,12 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 
 @inproceedings{DOL-TKE2012-repeated,
 	Address = {Madrid, Spain},
-	Author = {C. Lange AND T. Mossakowski AND O. Kutz AND C. Galinski AND M. Gr\"uninger AND D. Couto Vale},
+	Author = {Christoph Lange AND Till Mossakowski AND Oliver Kutz AND Christian Galinski AND Michael Gr\"uninger AND Daniel Couto Vale},
 	Booktitle = {Proc.\ of the 10th Terminology and Knowledge Engineering Conference (TKE 2012)},
 	Date-Added = {2012-05-12 17:08:34 +0000},
 	Date-Modified = {2012-05-12 17:16:33 +0000},
 	Title = {{The Distributed Ontology Language (DOL): Use Cases, Syntax, and Extensibility}},
 	Year = {2012}}
-
 
 @inproceedings{DOL-3semantics-repeated,
 	Author = {Till Mossakowski AND Christoph Lange AND Oliver Kutz},
@@ -69,11 +68,11 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 
 @inproceedings{blendingc3gi12-repeated,
 	Address = {Montpellier, France},
-	Author = {O. Kutz AND T. Mossakowski AND J. Hois AND M. Bhatt AND J. Bateman},
+	Author = {Oliver Kutz AND Till Mossakowski AND Joana Hois AND Mehul Bhatt AND John Bateman},
 	Booktitle = {Computational Creativity, Concept Invention, and General Intelligence, Proc.\ of the 1st Int.\ Workshop C3GI@ECAI},
 	Date-Added = {2012-10-28 13:30:21 +0000},
 	Date-Modified = {2013-05-20 15:31:16 +0000},
-	Editor = {Tarek Besold AND Kai-Uwe Kuehnberger AND Marco Schorlemmer AND Alan Smaill},
+	Editor = {Tarek R. Besold AND Kai-Uwe Kuehnberger AND Marco Schorlemmer AND Alan Smaill},
 	Month = {August~27},
 	Publisher = {Publications of the Institute of Cognitive Science, Osnabr{\"u}ck},
 	Title = {{Ontological Blending in DOL}},
@@ -82,7 +81,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	
 
 @article{hyper2010-repeated,
-		Author = {O. Kutz AND T. Mossakowski AND D. L\"ucke},
+		Author = {Oliver Kutz AND Till Mossakowski AND Dominik L\"ucke},
 		Date-Added = {2011-10-20 16:27:34 +0000},
 		Date-Modified = {2011-10-20 16:27:34 +0000},
 		Journal = {Logica Universalis},
@@ -96,7 +95,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 @Article{Inconsistency,
   author = 	 {Till Mossakowski and Lutz {Schr\"oder}},
   title = 	 {On Inconsistency and Unsatisfiability},
-  journal = 	 {Int J Software Informatics},
+  journal = 	 {International Journal of Software and Informatics},
   year = 	 {2015},
   volume = 	 {9},
   number = 	 {2},
