--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4759,14 +4759,23 @@ is obvious (the structure is largely the same),
 \item both \syntax{\%satisfiable}, \syntax{\%cons} and \syntax{\%mcons} are translated
   to \syntax{model-conservative},
 \item both \syntax{\%consistent}  and \syntax{\%ccons} are translated
-  to \syntax{consequence-conservative},,
+  to \syntax{consequence-conservative},
 \item  both   \syntax{\%unsatisfiable} and \syntax{\%notmcons} are translated to
   \syntax{not-model-conservative},
 \item both \syntax{\%inconsistent}  and \syntax{\%notccons} are translated
-  to \syntax{not-consequence-conservative},,
-\item Moreover, both \syntax{closed-world} and \syntax{minimize} are
+  to \syntax{not-consequence-conservative},
+\item moreover, both \syntax{closed-world} and \syntax{minimize} are
   translated to \syntax{minimize}.
 \end{itemize}
+Note that the MOF abstract syntax subsumes all these elements except
+from those in the last line under the enumeration class
+\syntax{ConservativityStrength}. Not all elements of the enumeration
+can be used at any position; the corresponding restrictions are
+expressed as OCL constraints.  By contrast, the concrete syntax
+features a more fine-grained structure of non-terminals
+(\syntax{Conservative}, \syntax{ConservativityStrength} and
+\syntax{ExtConservativityStrength}) in order to express the same
+constraints via the EBNF grammar.
                        
 \begin{lstlisting}[language=ebnf,escapeinside={()},mathescape]
 
