Align `Relation` with abstract syntax
Since `Relation` maps to two different classes in the abstract syntax,
these have to be mirrored here. The only problem is that for
`StandardRelationValues` has 7 elements in the abstract syntax but only
6 concrete keywords are given in the concrete syntax, so we must find a
representation for the extraneous one, which presumably is
`default-relation`.
I hope the comment dealing with this is:

  a: correct and
  b: enough to clarify things.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5080,7 +5080,11 @@ SingleCorrespondence ::= Symbol [Relation] [Confidence]
 CorrespondenceId   ::= '%(' IRI ')%'
 Symbol          ::= IRI
 GeneralizedTerm    ::= Symbol
-Relation           ::= '>' | '<' | '=' | '%' | 'ni' | 'in' | IRI
+Relation           ::= RelationReference | StandardRelation
+RelationReference  ::= IRI
+StandardRelation   ::= '>' | '<' | '=' | '%' | 'ni' | 'in'
+                       *@$<$ \rm No keyword corresponding to @*default-relation*@ \rm as this is just the default if@*
+                       *@\phantom{$<$ }@*Relation*@ \rm is omitted$>$@*
 Confidence         ::= Double
 Double             ::= *@$<$ a number $\in [0,1]$ $>$@*
 \end{lstlisting}
