--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -1,7 +1,7 @@
 @STRING{lncs = {Lect. Notes Comp. Sci.}}
 
 @ARTICLE{GoguenBurstall92,
-  AUTHOR = {Joseph A. Goguen and Rod M. Burstall},
+  AUTHOR = {J. A. Goguen and R. M. Burstall},
   TITLE = {Institutions: Abstract Model Theory for Specification and Programming},
   JOURNAL = {J. ACM},
   VOLUME = {39},
@@ -236,7 +236,7 @@ ZimmerEuze06,
 }
 
 @INPROCEEDINGS{Meseguer89,
-  AUTHOR = {Jos\'e Meseguer},
+  AUTHOR = {J. Meseguer},
   TITLE = {General Logics},
   BOOKTITLE = {Logic Colloquium 87},
   YEAR = {1989},
@@ -244,7 +244,7 @@ ZimmerEuze06,
 }
 
 @article{Comorphisms,
-  author = {Joseph A. Goguen and G. Ro\c{s}u},
+  author = {J. A. Goguen and G. Ro\c{s}u},
   title = {Institution morphisms},
   journal = {Formal aspects of computing 13, pp. 274-307, 2002},
   year = 2002,
@@ -256,7 +256,7 @@ ZimmerEuze06,
   year = 2002,
 }
 @article{Institutes,
-  author = {T. Mossakowski and Oliver Kutz},
+  author = {T. Mossakowski and O. Kutz},
   title = {Institutes: A simpler semantics for heterogeneous ontologies},
   journal = {December 2011, submitted. \url{http://www.informatik.uni-bremen.de/~till/papers/hetonto.pdf}},
   year = 2011,
@@ -275,7 +275,7 @@ ZimmerEuze06,
 	Year = {2011}}
 
 @article{ThreeSemantics,
-  author = {T. Mossakowski and C. Lange and Oliver Kutz},
+  author = {T. Mossakowski and C. Lange and O. Kutz},
   title = {Three Semantics for the Core of the Distributed Ontology Language},
   journal = {In Michael Gruninger (Ed.), FOIS 2012: 7th International Conference on Formal Ontology in Information Systems},
   year = 2012,
@@ -299,7 +299,7 @@ ZimmerEuze06,
   year = 1999,
 }
 @article{do-roam,
-  author = {M. Codescu and G. Horsinka and Oliver Kutz and T. Mossakowski and R. Rau},
+  author = {M. Codescu and G. Horsinka and O. Kutz and T. Mossakowski and R. Rau},
   title = {DO-ROAM: Activity-Oriented Search and Navigation with OpenStreetMap},
   journal = {In: Fourth International Conference on GeoSpatial Semantics, C. Claramunt, S. Levashkin, M. Bertolotto (eds.), pp. 88--107, no.\ 6631 in LNCS, Springer, 2011.},
   year = 2011,
@@ -332,7 +332,7 @@ ZimmerEuze06,
 }
 
 @INPROCEEDINGS{OWLSTime,
-  AUTHOR = {Feng Pan and Jerry R. Hobbs},
+  AUTHOR = {F. Pan and J. R. Hobbs},
   TITLE = {{Time in OWL-S}},
   BOOKTITLE = {Proc.\ of the AAAI Spring Symp.\ on Semantic Web Services},
   PAGES = {29--36},
@@ -342,7 +342,7 @@ ZimmerEuze06,
 @inproceedings{SROIQ,
 	Author = {I. Horrocks AND O. Kutz AND U. Sattler},
 	Booktitle = {Proc.\ of the 10th International Conference on Principles of Knowledge Representation and Reasoning (KR-06)},
-	Editor = {Patrick Doherty and John Mylopoulos and Christopher Welty},
+	Editor = {P. Doherty and J. Mylopoulos and C. Welty},
 	Publisher = {AAAI Press},
 	Title = {{The Even More Irresistible $\mathcal{SROIQ}$}},
 	Year = {2006}}
@@ -415,9 +415,9 @@ ZimmerEuze06,
 }
 
 @book{DBLP:series/lncs/5445,
-  editor    = {Heiner Stuckenschmidt and
-               Christine Parent and
-               Stefano Spaccapietra},
+  editor    = {H. Stuckenschmidt and
+               C. Parent and
+               S. Spaccapietra},
   title     = {Modular Ontologies: Concepts, Theories and Techniques for
                Knowledge Modularization},
   booktitle = {Modular Ontologies},
@@ -431,8 +431,8 @@ ZimmerEuze06,
 }
 
 @book{DBLP:books/daglib/0032976,
-  author    = {J{\'e}r{\^o}me Euzenat and
-               Pavel Shvaiko},
+  author    = {J. Euzenat and
+               P. Shvaiko},
   title     = {Ontology Matching, Second Edition},
   publisher = {Springer},
   year      = {2013},
@@ -454,8 +454,8 @@ ZimmerEuze06,
 }
 
 @inproceedings{DBLP:conf/ijcai/LutzW11,
-  author    = {Carsten Lutz and
-               Frank Wolter},
+  author    = {C. Lutz and
+               F. Wolter},
   title     = {Foundations for Uniform Interpolation and Forgetting in
                Expressive Description Logics},
   booktitle = {IJCAI},
@@ -468,10 +468,10 @@ ZimmerEuze06,
 }
 
 @InProceedings{MossakowskiTarlecki09,
-  author = {Till Mossakowski and Andrzej Tarlecki},
+  author = {T. Mossakowski and A. Tarlecki},
   title = {Heterogeneous Logical Environments for Distributed Specifications},
   year = {2009},
-  editor = {Andrea Corradini and Ugo Montanari},
+  editor = {A. Corradini and U. Montanari},
   booktitle = {WADT 2008},
   publisher = {Springer},
   series = {Lecture Notes in Computer Science},
@@ -494,7 +494,7 @@ We distinguish three kinds of heterogeneity:
 }
 
 @techreport{bagstad_aries_2011,
-  author = {Bagstad, Kenneth J. and Villa, Ferdinando and Johnson, Gary W. and Voigt, B.},
+  author = {Bagstad, K. J. and Villa, F. and Johnson, G. W. and Voigt, B.},
   title = {{ARIES} – Artificial Intelligence for Ecosystem Services: A guide to models and data , version 1.0},
   institution = {ARIES},
   type = {Technical Report},
@@ -513,7 +513,7 @@ We distinguish three kinds of heterogeneity:
 }
 
 @article{Mossakowski02,
-  author =	 {Till Mossakowski},
+  author =	 {T. Mossakowski},
   title =	 {{Relating {\CASL} with Other Specification Languages:
                   the Institution Level}},
   year =	 2002,
@@ -536,10 +536,10 @@ We distinguish three kinds of heterogeneity:
 }
 
 @INCOLLECTION{knapp-wuttke:models06wsh:2007,
-  AUTHOR = {Alexander Knapp and
-            Jochen Wuttke},
+  AUTHOR = {A. Knapp and
+            J. Wuttke},
   TITLE  = {Model Checking of {UML} 2.0 Interactions},
-  EDITOR = {Thomas Kühne},
+  EDITOR = {T. Kühne},
   BOOKTITLE = {Reports Rev. Sel. Papers Wsh.s Symp.s MoDELS 2006},
   PUBLISHER = {Springer},
   SERIES = {Lect. Notes Comp. Sci.},
@@ -551,9 +551,9 @@ We distinguish three kinds of heterogeneity:
 }
 
 @MISC{knapp-mossakowski-roggenbach:corr:2014,
-  AUTHOR = {Alexander Knapp and
-            Till Mossakowski and
-            Markus Roggenbach},
+  AUTHOR = {A. Knapp and
+            T. Mossakowski and
+            M. Roggenbach},
   TITLE = {{An Institutional Framework for Heterogeneous Formal Development in UML}},
   YEAR = {2014},
   NOTE = {CoRR abs/1403.7747},
@@ -561,10 +561,10 @@ We distinguish three kinds of heterogeneity:
 }
 
 @article{AlignmentAPI,
-  author    = {J{\'{e}}r{\^{o}}me David and
-               J{\'{e}}r{\^{o}}me Euzenat and
-               Fran{\c{c}}ois Scharffe and
-               C{\'{a}}ssia Trojahn dos Santos},
+  author    = {J. David and
+               J. Euzenat and
+               F: Scharffe and
+               C. Trojahn dos Santos},
   title     = {The Alignment {API} 4.0},
   journal   = {Semantic Web},
   year      = {2011},
@@ -594,10 +594,10 @@ We distinguish three kinds of heterogeneity:
 }
 
 @INPROCEEDINGS{DGS91,
-AUTHOR        = {Diaconescu, R{\u{a}}zvan and Goguen, Joseph and Stefaneas, Petros}, 
+AUTHOR        = {Diaconescu, R. and Goguen, J. and Stefaneas, P.}, 
 TITLE         = {Logical Support for Modularisation},
 BOOKTITLE     = {Proceedings of a Workshop on Logical Frameworks},
-EDITOR        = {Huet, Gerard and Plotkin, Gordon}, 
+EDITOR        = {Huet, G. and Plotkin, G.}, 
 YEAR          = {1991},
 HOWPUBLISHED  = {Programming Research Group, Oxford University},
 }
@@ -614,9 +614,9 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 
 
 @inproceedings{DBLP:conf/owled/SchneiderRS13,
-  author    = {Michael Schneider and
-               Sebastian Rudolph and
-               Geoff Sutcliffe},
+  author    = {M. Schneider and
+               S. Rudolph and
+               G. Sutcliffe},
   title     = {Modeling in {OWL} 2 without Restrictions},
   booktitle = {Proceedings of the 10th International Workshop on {OWL:} Experiences
                and Directions {(OWLED} 2013) co-located with 10th Extended Semantic
@@ -630,9 +630,9 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 }
 
 @proceedings{DBLP:conf/owled/2013,
-  editor    = {Mariano Rodriguez{-}Muro and
-               Simon Jupp and
-               Kavitha Srinivas},
+  editor    = {M. Rodriguez{-}Muro and
+               S. Jupp and
+               K. Srinivas},
   title     = {Proceedings of the 10th International Workshop on {OWL:} Experiences
                and Directions {(OWLED} 2013) co-located with 10th Extended Semantic
                Web Conference {(ESWC} 2013), Montpellier, France, May 26-27, 2013},
@@ -649,9 +649,9 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 
 @inproceedings{LMK:LoLaModularOntologyLogLangTrans12,
   title = {{LoLa}: A Modular Ontology of Logics, Languages, and Translations},
-  author = {Christoph Lange and Till Mossakowski and Oliver Kutz},
+  author = {C. Lange and T. Mossakowski and O. Kutz},
   booktitle = {Modular Ontologies},
-  editor = {Thomas Schneider and Dirk Walther},
+  editor = {T. Schneider and D. Walther},
   eventtitle = {6\textsuperscript{th} International Workshop (WoMO)},
   year = {2012},
   eventdate = {2012-07-24},
@@ -665,7 +665,7 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
   pubs = {clange,projects/ontoiop}}
 
 @article{Seidewitz08,
-    author = {Seidewitz, Ed},
+    author = {Seidewitz, E.},
     citeulike-article-id = {10316479},
     journal = {Syntax And Semantics},
     keywords = {2008, uml},
@@ -680,9 +680,9 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 
 
 @inproceedings{DBLP:conf/ijcai/LutzWW07,
-  author    = {Carsten Lutz and
-               Dirk Walther and
-               Frank Wolter},
+  author    = {C. Lutz and
+               D. Walther and
+               F. Wolter},
   title     = {Conservative Extensions in Expressive Description Logics},
   booktitle = {{IJCAI} 2007, Proceedings of the 20th International Joint Conference
                on Artificial Intelligence, Hyderabad, India, January 6-12, 2007},
@@ -696,7 +696,7 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 }
 
 @proceedings{DBLP:conf/ijcai/2007,
-  editor    = {Manuela M. Veloso},
+  editor    = {M. M. Veloso},
   title     = {{IJCAI} 2007, Proceedings of the 20th International Joint Conference
                on Artificial Intelligence, Hyderabad, India, January 6-12, 2007},
   year      = {2007},
@@ -708,8 +708,8 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 
 
 @inproceedings{DBLP:conf/birthday/GoguenR04,
-  author    = {Joseph A. Goguen and
-               Grigore Rosu},
+  author    = {J. A. Goguen and
+               G. Rosu},
   title     = {Composing Hidden Information Modules over Inclusive Institutions},
   booktitle = {From Object-Orientation to Formal Methods, Essays in Memory of Ole-Johan
                Dahl},
@@ -724,9 +724,9 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 }
 
 @proceedings{DBLP:conf/birthday/2004dahl,
-  editor    = {Olaf Owe and
-               Stein Krogdahl and
-               Tom Lyche},
+  editor    = {O. Owe and
+               S. Krogdahl and
+               T. Lyche},
   title     = {From Object-Orientation to Formal Methods, Essays in Memory of Ole-Johan
                Dahl},
   series    = {Lecture Notes in Computer Science},
@@ -740,9 +740,9 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 }
 
 @article{DBLP:journals/ai/KontchakovWZ10,
-  author    = {Roman Kontchakov and
-               Frank Wolter and
-               Michael Zakharyaschev},
+  author    = {R. Kontchakov and
+               F. Wolter and
+               M. Zakharyaschev},
   title     = {Logic-based ontology comparison and module extraction, with an application
                to {DL-Lite}},
   journal   = {Artif. Intell.},
@@ -758,7 +758,7 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 }
 
 @article{RabKoh:WSMSML13,
-  author = {Florian Rabe and Michael Kohlhase},
+  author = {F. Rabe and M. Kohlhase},
   title = {A Scalable Module System},
   journal = {Information \& Computation},
   url = {http://kwarc.info/frabe/Research/mmt.pdf},
@@ -767,11 +767,11 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
   pubs = {mkohlhase,frabe,projects/omdoc}}
 
 @InProceedings{IbanezEtAl15,
-  author =       {Yazmin Angelica Ibanez and Till Mossakowski and Andrzej Tarlecki and Don Sannella},
+  author =       {Y. A. Ibanez and T. Mossakowski and A. Tarlecki and D. Sannella},
   title =        {Modularity of Ontologies in an Arbitrary Institution},
   booktitle = {Logic, Rewriting, and Concurrency: A Festschrift Symposium in Honor of José Meseguer},
   year =      {2015},
-  editor =    {Narciso Marti-Oliet et al.},
+  editor =    {N. Marti-Oliet et al.},
   OPTvolume =    {},
   series =    {Lecture Notes in Computer Science},
   OPTpages =     {},
@@ -780,11 +780,11 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
 }
 
 @INPROCEEDINGS{mossakowskiEtAl14b,
-  AUTHOR = {Till Mossakowski and
-            Mihai Codescu and
-            Oliver Kutz and
-            Christoph Lange and
-            Michael Gruninger},
+  AUTHOR = {T. Mossakowski and
+            M. Codescu and
+            O. Kutz and
+            C. Lange and
+            M. Gruninger},
   TITLE = {Proof Support for Common Logic},
   BOOKTITLE = {Proc. Wsh. Automated Reasoning for Quantified Non-Classical Logic (ARQNL)},
   YEAR = {2014},
@@ -801,7 +801,7 @@ between Common Logic theories.},
 
 
 @InProceedings{MossakowskiEtAl15a,
-  author = 	 {Till Mossakowski and Ulf Krumnack and Tom Maibaum},
+  author = 	 {T. Mossakowski and U. Krumnack and T. Maibaum},
   title = 	 {What is a derived signature morphism?},
   booktitle =    {WADT 2014},
   year = 	 {2015},
@@ -827,10 +827,10 @@ YEAR = 1990}
    year = 1998}
 
 @InProceedings{CodescuEtAl2011d,
-  author = {Mihai Codescu and Fulya Horozal and Michael Kohlhase and Till Mossakowski and Florian Rabe},
+  author = {M. Codescu and F. Horozal and M. Kohlhase and T. Mossakowski and F. Rabe},
   title = {Project Abstract: Logic Atlas and Integrator (LATIN)},
   year = {2011},
-  editor = {James H. Davenport and William M. Farmer and Josef Urban and Florian Rabe},
+  editor = {J. H. Davenport and W. M. Farmer and J. Urban and F. Rabe},
   booktitle = {Intelligent Computer Mathematics 18th Symposium, Calculemus 2011, and 10th International Conference, MKM 2011, Bertinoro, Italy, July 18-23, 2011. Proceedings},
   publisher = {Springer-Verlag Berlin Heidelberg},
   series = {Lecture Notes in Computer Science},
@@ -844,7 +844,7 @@ YEAR = 1990}
 
 @incollection{zedlitz2012uml,
   title={From UML to OWL 2},
-  author={Zedlitz, Jesper and J{\"o}rke, Jan and Luttenberger, Norbert},
+  author={Zedlitz, J. and J{\"o}rke, J. and Luttenberger, N.},
   booktitle={Knowledge Technology},
   pages={154--163},
   year={2012},
@@ -852,7 +852,7 @@ YEAR = 1990}
 }
 
 @TechReport{w3c:owl2-direct-semantics,
-  author =   {Boris Motik and Peter F. Patel-Schneider and Cuenca Grau, Bernardo},
+  author =   {B. Motik and P. F. Patel-Schneider and B. Cuenca Grau},
   title =    {{OWL} 2 Web Ontology Language: Direct Semantics},
   type = {{W3C} Recommendation},
   institution = {World Wide Web Consortium ({W3C})},
@@ -862,7 +862,7 @@ YEAR = 1990}
   date = {2009-10-27}}
 
 @TechReport{w3c:owl2-spec,
-  author =   {Boris Motik and Peter F. Patel-Schneider and Bijan Parsia},
+  author =   {B. Motik and P. F. Patel-Schneider and B. Parsia},
   title =    {{OWL} 2 Web Ontology Language: Structural Specification and Functional-Style Syntax},
   type = {{W3C} Recommendation},
   institution = {World Wide Web Consortium ({W3C})},
@@ -873,7 +873,7 @@ YEAR = 1990}
 
 
 @Article{CalvaneseEtAl11,
-  author = 	 {Diego Calvanese and Giuseppe De Giacomo and Domenico Lembo and Maurizio Lenzerini and Antonella Poggi and Mariano Rodriguez-Muro and Riccardo Rosati and Marco Ruzzi and Domenico Fabio Savo},
+  author = 	 {D. Calvanese and G. De Giacomo and D. Lembo and M. Lenzerini and A. Poggi and M. Rodriguez-Muro and R. Rosati and M. Ruzzi and D. Fabio Savo},
   title = 	 {The MASTRO system for ontology-based data access},
   journal = 	 {Semantic Web},
   year = 	 {2011},
@@ -884,7 +884,7 @@ YEAR = 1990}
 
 
 @InProceedings{OM2014,
-  author = {Mihai Codescu and Till Mossakowski and Oliver Kutz},
+  author = {M. Codescu and T. Mossakowski and O. Kutz},
   title = {A Categorical Approach to Ontology Alignment},
   year = {2014},
   booktitle = {Proc. of the 9th International Workshop on Ontology Matching (OM-2014), ISWC-2014, Riva del Garda, Trentino, Italy.},
@@ -908,7 +908,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	title = {{The distributed ontology, modelling and specification language - DOL}},
 	Date-Added = {2015-01-15 22:16:06 +0000},
 	Date-Modified = {2015-01-15 22:19:05 +0000},
-	Editor = {Koslow, Arnold AND Buchsbaum, Arthur},
+	Editor = {Koslow, A. AND Buchsbaum, A.},
 	Publisher = {Birkh\"auser},
 	Series = {Studies in Universal Logic},
 	bookTitle = {{The Road to Universal Logic--Festschrift for 50th birthday of Jean-Yves Beziau, Volume II}},
@@ -916,11 +916,11 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 
 
 @inproceedings{womo13,
-	Author = {Till Mossakowski AND Oliver Kutz AND Mihai Codescu AND Christoph Lange},
+	Author = {T. Mossakowski AND O. Kutz AND M. Codescu AND C. Lange},
 	Booktitle = {{Proceedings of the 7th International Workshop on Modular Ontologies (WoMO-13)}},
 	Date-Added = {2013-11-18 17:14:46 +0000},
 	Date-Modified = {2013-11-18 17:23:35 +0000},
-	Editor = {Chiara Del Vescovo et al.},
+	Editor = {C. Del Vescovo et al.},
 	Publisher = {CEUR-WS},
 	Title = {{The Distributed Ontology, Modeling and Specification Language}},
 	Volume = {1081},
@@ -938,11 +938,11 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 
 
 @inproceedings{DOL-3semantics,
-	Author = {Till Mossakowski AND Christoph Lange AND Oliver Kutz},
+	Author = {T. Mossakowski AND C. Lange AND O. Kutz},
 	Booktitle = {7th International Conference on {F}ormal {O}ntology in {I}nformation {S}ystems (FOIS)},
 	Date-Added = {2012-02-07 22:11:18 +0000},
 	Date-Modified = {2013-05-09 20:05:36 +0000},
-	Editor = {Maureen Donnelly AND Giancarlo Guizzardi},
+	Editor = {M. Donnelly AND G. Guizzardi},
 	Note = {{FOIS Best Paper Award}},
 	Pages = {337--352},
 	Publisher = {{IOS} {P}ress},
@@ -958,7 +958,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	Booktitle = {Computational Creativity, Concept Invention, and General Intelligence, Proc.\ of the 1st Int.\ Workshop C3GI@ECAI},
 	Date-Added = {2012-10-28 13:30:21 +0000},
 	Date-Modified = {2013-05-20 15:31:16 +0000},
-	Editor = {Tarek Besold AND Kai-Uwe Kuehnberger AND Marco Schorlemmer AND Alan Smaill},
+	Editor = {T. R. Besold AND K-U. Kuehnberger AND M. Schorlemmer AND A. Smaill},
 	Month = {August~27},
 	Publisher = {Publications of the Institute of Cognitive Science, Osnabr{\"u}ck},
 	Title = {{Ontological Blending in DOL}},
@@ -1017,7 +1017,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 }
 
 @BOOK{V-model,
-  AUTHOR = {Roger S. Pressman},
+  AUTHOR = {R. S. Pressman},
   TITLE = {Software Engineering: A Practitioner's Approach},
   PUBLISHER = {The McGraw-Hill Companies},
   EDITION = {8th},
