--- a/Standard/tptp.bib
+++ b/Standard/tptp.bib
@@ -1,9 +1,9 @@
 
 
 @inproceedings{DBLP:conf/cade/SutcliffeSY94,
-  author    = {Geoff Sutcliffe and
-               Christian B. Suttner and
-               Theodor Yemenis},
+  author    = {G. Sutcliffe and
+               C. B. Suttner and
+               T. Yemenis},
   title     = {The {TPTP} Problem Library},
   booktitle = {Automated Deduction - CADE-12, 12th International Conference on Automated
                Deduction, Nancy, France, June 26 - July 1, 1994, Proceedings},
@@ -18,7 +18,7 @@
 }
 
 @proceedings{DBLP:conf/cade/1994,
-  editor    = {Alan Bundy},
+  editor    = {A. Bundy},
   title     = {Automated Deduction - CADE-12, 12th International Conference on Automated
                Deduction, Nancy, France, June 26 - July 1, 1994, Proceedings},
   series    = {Lecture Notes in Computer Science},
@@ -32,7 +32,7 @@
 }
 
 @article{DBLP:journals/jar/Sutcliffe09,
-  author    = {Geoff Sutcliffe},
+  author    = {G. Sutcliffe},
   title     = {The {TPTP} Problem Library and Associated Infrastructure},
   journal   = {J. Autom. Reasoning},
   volume    = {43},
@@ -47,7 +47,7 @@
 }
 
 @Unpublished{TPTP,
-  author = 	 {Geoff Sutcliffe},
+  author = 	 {G. Sutcliffe},
   title = 	 {The TPTP Problem Library
 for Automated Theorem Proving},
   note = 	 {\url{http://www.tptp.org}},
