Align `RefMap` with abstract syntax
This concrete nonterminal actually does not have a direct correspondence
in the abstract syntax and it cannot really be split up, but we can make
two of the abstract classes reappear in the concrete syntax by making
`RefMap` expand to two new production rules.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5042,9 +5042,10 @@ Refinement         ::= GroupOMS
                      | NetworkName
                      | Refinement 'refined' [RefMap] 'to' Refinement
                      | Refinement 'interpreted' [RefMap] 'by' Refinement
-RefMap             ::= 'via' LanguageTranslation [SymbolMap]
-                     | 'via' [LanguageTranslation] SymbolMap
-                     | 'via' Refinement ( ',' Refinement )*
+RefMap             ::= 'via' ( OMSRefinementMap | NetworkRefinementMap )
+OMSRefinementMap   ::= LanguageTranslation [SymbolMap]
+                     | [LanguageTranslation] SymbolMap
+NetworkRefinementMap ::= Refinement ( ',' Refinement )*
 EntailmentDefinition ::= 'entailment' EntailmentName '='
                          EntailmentType 'end'
 EntailmentName     ::= IRI
